--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,29 @@
 {
-  "name": "my-application",
-  "version": "0.0.1",
-  "description": "An Awesome Express App",
-  "private": true,
-  "dependencies": {
-    "jquery": "latest"
-  },
+  "name": "resign",
+  "main": [
+    "/dist/resign.min.js",
+    "/dist/resign.min.css"
+  ],
+  "version": "0.1.0",
+  "description": "TODO",
+  "authors": [
+    "TODO"
+  ],
   "ignore": [
     "**/.*",
+    "package.json",
+    "klei.json",
+    "gulpfile.js",
     "node_modules",
     "bower_components",
-    "test",
-    "tests"
-  ]
+    "src"
+  ],
+  "dependencies": {
+    "angular": "~1.2.14",
+    "angular-route": "~1.2.14",
+    "jquery": "~2.1.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.14"
+  }
 }
