--- a/package.json
+++ b/package.json
@@ -1,31 +1,48 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "resign",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
-  },
-  "devDependencies": {
-    "gulp": "latest"
-    ,"bower": "latest"
-    ,"gulp-nodemon": "latest"
-    ,"gulp-watch": "~0.6.4"
-    ,"gulp-jshint": "latest",
-    "gulp-livereload": "^1.5.0"
+    "start": "gulp watch",
+    "test": "gulp test"
   },
   "dependencies": {
-    "express": "~4.0.0"
-    ,"static-favicon": "~1.0.0"
-    ,"morgan": "~1.0.0"
-    ,"cookie-parser": "~1.0.1"
-    ,"body-parser": "~1.0.0"
-    ,"debug": "~0.7.4"
-    
-    
-    
-    , "ejs": "~0.8.5"
-    
-    
-    , "node-compass": "0.2.3"
+  },
+  "devDependencies": {
+    "gulp": "^3.7.0",
+    "gulp-util": "^2.2.14",
+    "gulp-jshint": "^1.6.1",
+    "gulp-load-plugins": "~0.5.1",
+    "jshint-stylish": "~0.4.0",
+    "gulp-rename": "^1.2.0",
+    "main-bower-files": "^1.0.1",
+    "gulp-angular-filesort": "~0.1.1",
+    "gulp-filter": "~0.5.0",
+    "lazypipe": "~0.2.1",
+    "gulp-cached": "^1.0.1",
+    "gulp-embedlr": "~0.5.2",
+    "gulp-livereload": "^2.1.0",
+    "gulp-header": "^1.0.2",
+    "gulp-inject": "~0.4.1",
+    "gulp-serve": "~0.2.0",
+    "gulp-concat": "^2.2.0",
+    "rimraf": "^2.2.8",
+    "gulp-sass": "^0.7.1",
+    "gulp-minify-css": "~0.3.4",
+    "gulp-csslint": "~0.1.4",
+    "event-stream": "^3.1.5",
+    "streamqueue": "~0.1.1",
+    "gulp-uglify": "~0.3.0",
+    "gulp-htmlmin": "~0.1.2",
+    "gulp-ng-html2js": "~0.1.7",
+    "gulp-ng-annotate": "~0.2.0",
+    "gulp-karma": "~0.0.4",
+    "karma-chai": "~0.1.0",
+    "karma-mocha": "~0.1.3",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-script-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma": "~0.12.16"
   }
 }
